--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6548,9 +6548,41 @@ button.close {
   }
 }
 body {
+  text-align: center;
+  font-weight: 100;
   background: url('/image/balmoral_rotunda_by_arc_photography_FULL.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+body .wrapper {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+body .wrapper img.main {
+  margin-top: 4em;
+  height: 80%;
+  width: 98vw;
+  display: table-cell;
+}
+@media (max-width: 768px) {
+  body .wrapper img.main {
+    margin-top: -1em;
+  }
+}
+.timer {
+  color: hotpink;
+  text-align: center;
+  font-size: 2.5em;
+  font-weight: 100;
+}
+@media (max-width: 768px) {
+  .timer {
+    font-size: 1.5em;
+  }
 }
