--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6550,7 +6550,7 @@ button.close {
 body {
   text-align: center;
   font-weight: 100;
-  background: url('/image/balmoral_rotunda_by_arc_photography_FULL.png') no-repeat center center fixed;
+  background: url('/image/balmoral_rotunda_FULL.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -6585,4 +6585,7 @@ body .wrapper img.main {
   .timer {
     font-size: 1.5em;
   }
+}
+.timer span.no-break {
+  display: inline-block;
 }
