--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6547,11 +6547,14 @@ button.close {
     display: none !important;
   }
 }
+html {
+  font-weight: 100;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
 .timer {
   color: hotpink;
   text-align: center;
   font-size: 2.5em;
-  font-weight: 100;
   padding-bottom: 1em;
 }
 @media (max-width: 768px) {
@@ -6564,7 +6567,6 @@ button.close {
 }
 body.static-bg {
   text-align: center;
-  font-weight: 100;
   background: url('/image/balmoral_rotunda_FULL.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -6633,10 +6635,11 @@ body.vid_bg #bgvideo {
   top: 0;
   opacity: 0.46 !important;
   z-index: -1;
+  min-width: 100%;
 }
 body.vid_bg .content {
   position: absolute;
-  min-height: 600px;
+  min-height: 500px;
   top: 0;
   left: 0;
   right: 0;
@@ -6645,7 +6648,7 @@ body.vid_bg .content {
 }
 @media (max-width: 768px) and (orientation: landscape) {
   body.vid_bg .content {
-    min-height: 500px;
+    min-height: 200px;
   }
 }
 body.vid_bg .content img.main {
@@ -6659,7 +6662,7 @@ body.vid_bg .content img.main {
   body.vid_bg .content img.main {
     margin-top: 0;
     margin-bottom: -10px;
-    height: 50%;
+    height: 80%;
   }
 }
 body.vid_bg .content .timer {
